--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
+  flutter_rating_bar: ^4.0.1
   get_it: ^7.2.0
   http: ^0.13.5
   shared_preferences: ^2.0.15
