--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^3.4.5
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   equatable: ^2.0.3
@@ -38,8 +39,9 @@ dependencies:
   flutter_bloc: ^8.0.1
   flutter_rating_bar: ^4.0.1
   get_it: ^7.2.0
+  hive_flutter: ^1.1.0
   http: ^0.13.5
-  shared_preferences: ^2.0.15
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_lints: ^2.0.0
