--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   get_it: ^7.2.0
   hive_flutter: ^1.1.0
   http: ^0.13.5
+  internet_connection_checker: ^0.0.1+4
   path_provider: ^2.0.11
 
 dev_dependencies:
